[FIX] Mobile top menu off-centre when expanded on mobile.

--- a/src/assets/toolkit/styles/6-components/_components.site-header.scss
+++ b/src/assets/toolkit/styles/6-components/_components.site-header.scss
@@ -396,6 +396,10 @@ $logo-max-height: 6.5rem; //TODO: Transfer to rems using function
             }
           }
         }
+
+        @include breakpoint( $until: tablet ) {
+          padding-left: 0;
+        }
       }
 
     }
